[package]
name = "rusty-warden"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"
anyhow = "1.0.95"
tempfile = "3.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.25.0"
